--- a/ghpages/ngtq_bus_pages/src/style/NavigationBar.css
+++ b/ghpages/ngtq_bus_pages/src/style/NavigationBar.css
@@ -1,6 +1,8 @@
 
 .navigation-bar {
     display: flex;
-    justify-content: center;
-    color: black;
+    justify-content: space-between;
+    color: white;
+    margin-left: 30px;
+    margin-right: 30px;
 }
