--- a/ghpages/ngtq_bus_pages/src/style/NavigationItem.css
+++ b/ghpages/ngtq_bus_pages/src/style/NavigationItem.css
@@ -1,9 +1,15 @@
 
 .navigation-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
     border-style:solid;
-    border-color: blue;
+    background-color: blue;
+
     padding-left: 10px;
     padding-right: 10px;
-    height: 40px;
-    width: 100px;
+    height: 30px;
+    width: 110px;
 }
