--- a/ghpages/ngtq_bus_pages/src/style/NavigationBar.css
+++ b/ghpages/ngtq_bus_pages/src/style/NavigationBar.css
@@ -1,8 +1,25 @@
-
 .navigation-bar {
     display: flex;
-    justify-content: space-between;
-    color: white;
-    margin-left: 30px;
-    margin-right: 30px;
-}
+    align-items: center;
+    background-color: #333;
+    padding: 1rem;
+  }
+  
+  .navigation-bar-left {
+    flex: 0.5;
+    font-weight: bold;
+    color: #fff;
+  }
+  
+  .navigation-bar-center {
+    flex: 1.5;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+  }
+
+  .bar-item {
+    font-size: 1.5rem;
+    margin-left: 20px;
+    color: lawngreen;
+  }
